# light-ai-challenge

./: .gitignore  README.md  SCENARIO_VALIDATION.md  docker-compose.yml  plan.md
data/: mock_data.json  scenarios.json  tools.json
starter/: Dockerfile  README.md  TDD_APPROACH.md  docker-compose.yml  pyproject.toml  test_runtime.py
starter/src/light_agent/: mock_llm.py  mock_tools.py  runner.py  types.py
starter/src/light_agent/adapters/: __init__.py  light_ai_llm_adapter.py  light_ai_tool_adapter.py
starter/src/light_agent/config/: runtime_config.py
starter/src/light_agent/llm/: __init__.py  mock_llm_client.py
starter/src/light_agent/models/: __init__.py  tool.py
starter/src/light_agent/protocols/: __init__.py  llm_protocol.py  tool_executor_protocol.py
starter/src/light_agent/runtime/: agent_runtime.py
starter/src/light_agent/sandbox/: cli_runner.py
starter/src/light_agent/strategies/: __init__.py  conversation_manager.py  tool_orchestrator.py
starter/src/light_agent/tools/: __init__.py  tool_executor.py  tool_registry.py
starter/src/light_agent/trace/: __init__.py  trace_recorder.py
starter/tests/: conftest.py  test_scenarios.py  test_utils.py
starter/tests/integration/: test_agent_runtime.py
starter/tests/unit/: test_adapters.py  test_conversation_manager.py  test_llm_interface.py  test_tool_executor.py  test_tool_registry.py  test_trace_recorder.py  test_trace_recorder_extended.py
templates/: DESIGN.md  PRODUCTION.md
traces/: .gitignore  test_scenarios_test_approves_correct_invoice_20260305_194847_424647.json  (+11 more)
