[project]
name = "light-agent-challenge"
version = "0.1.0"
description = "Light AI Platform Engineer — Take-Home Challenge"
requires-python = ">=3.11"
dependencies = [
    # No required dependencies — you're free to add what you need.
    # Common choices:
    #   "openai"        — for OpenAI API
    #   "anthropic"     — for Anthropic API
    #   "httpx"         — for HTTP clients
    #   "pydantic"      — for data validation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
