[project]
name = "light-agent-challenge"
version = "0.1.0"
description = "Light AI Platform Engineer — Take-Home Challenge"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
light-agent = "light_agent.runner:main"

[tool.uv]
package = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
